// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Version renders correctly with latest version 1`] = `
<div
  className="css-Wrapper-f238mn0 css-fdqscn"
>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    Version Info
  </p>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    Flexget: 
    2.10.60
     
     
  </p>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    API: 
    1.1.2
  </p>
</div>
`;

exports[`components/layout/Version renders correctly without latest version 1`] = `
<div
  className="css-Wrapper-f238mn0 css-fdqscn"
>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    Version Info
  </p>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    Flexget: 
    2.10.11
     
    <a
      className="MuiButtonBase-root-10 MuiIconButton-root-1"
      href="https://flexget.com/ChangeLog"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
    >
      <span
        className="MuiIconButton-label-7"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-12 MuiIconButton-icon-8 fa fa-question-circle-o css-fdqscn"
        />
      </span>
      <span
        className="MuiTouchRipple-root-19"
      />
    </a>
     
  </p>
  <p
    className="css-Line-f238mn1 css-6x29zm"
  >
    API: 
    1.1.2
  </p>
</div>
`;
